# [MANAGED] FLEXT pyproject standardization
# Sections with [MANAGED] are enforced by flext_infra.deps.modernizer.
# Run `make mod` to regenerate all managed pyproject sections.
# Sections with [CUSTOM] are project-specific extension points.
# [MANAGED] build system
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
codegen = [
  "flext-infra @ git+https://github.com/flext-sh/flext-infra.git@0.20.0-dev",
]
dev = [
  "autoflake>=2.3.1",
  "bandit>=1.8",
  "black>=25.1",
  "blacken-docs>=1.19",
  "codespell>=2.3",
  "deptry>=0.23",
  "django-stubs>=5.2.2",
  "factory-boy>=3.3.1",
  "faker>=37.4",
  "flext-tests @ git+https://github.com/flext-sh/flext-tests.git@0.20.0-dev",
  "hypothesis>=6.125",
  "isort>=6.0.1",
  "matplotlib-stubs>=0.3",
  "mkdocs>=1.6",
  "mkdocs-awesome-pages-plugin>=2.9",
  "mkdocs-encryptcontent-plugin>=2",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-get-deps>=0.2",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-macros-plugin>=1",
  "mkdocs-material>=9.5",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-mermaid2-plugin>=1.1",
  "mkdocs-minify-plugin>=0.7",
  "mkdocs-print-site-plugin>=0.8",
  "mkdocs-redirects>=1.2",
  "mkdocs-section-index>=0.3.12",
  "mkdocs-versioning>=0.2",
  "mkdocstrings>=0.24",
  "mkdocstrings-python>=1.7",
  "pip-audit>=2.7.3",
  "pre-commit>=4.6.0",
  "pylint>=3.3",
  "pyrefly>=1.1.1,<1.2.0",
  "pytest>=8.4",
  "pytest-benchmark>=5.1",
  "pytest-clarity>=1.0.1",
  "pytest-codeblocks>=0.17.0",
  "pytest-cov>=6.2",
  "pytest-deadfixtures>=2.2.1",
  "pytest-env>=1.1.5",
  "pytest-markdown-docs>=0.9.2",
  "pytest-mock>=3.14",
  "pytest-randomly>=3.16",
  "pytest-sugar>=1",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.8",
  "pyupgrade>=3.19",
  "radon>=6.0.1",
  "ruff>=0.12.3",
  "types-cachetools>=6.2",
  "types-cffi>=2.0",
  "types-click>=7.1",
  "types-defusedxml>=0.7",
  "types-docker>=7.1",
  "types-flask>=1.1.6",
  "types-jsonschema>=4.26",
  "types-ldap3>=2.9.13.20250622",
  "types-paramiko>=4.0",
  "types-protobuf>=6.30.2.20250703",
  "types-psutil>=7",
  "types-psycopg2>=2.9.21.20250718",
  "types-pyasn1>=0.6",
  "types-pyopenssl>=24.1",
  "types-python-dateutil>=2.9",
  "types-pyyaml>=6.0.12.20260518",
  "types-redis>=4.6",
  "types-requests>=2.32.4",
  "types-setuptools>=80.9",
  "types-tabulate>=0.10",
  "types-toml>=0.10.8.20240310",
  "vulture>=2.13",
  "yamlfix>=1.19.1,<2",
]

# [CUSTOM] project metadata
[project]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.136.1",
  "flask>=3.1.3",
  "flext-cli @ git+https://github.com/flext-sh/flext-cli.git@0.20.0-dev",
  "flext-core @ git+https://github.com/flext-sh/flext-core.git@0.20.0-dev",
  "pydantic>=2.13.3",
  "pydantic-core>=2.46.3",
  "pydantic-settings>=2.14.0",
  "requests>=2.33.1",
  "uvicorn>=0.46.0",
]
description = "FLEXT Web - Modern Web Interface for FLEXT Platform"
keywords = ["enterprise", "flask", "flext", "frontend", "typed", "web"]
license = "MIT"
name = "flext-web"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.20.0.dev0"

[[project.authors]]
email = "team@flext.sh"
name = "FLEXT Team"

[[project.maintainers]]
email = "team@flext.sh"
name = "FLEXT Team"

# [MANAGED] consolidated development dependencies
[project.optional-dependencies]
dev = [
  "autoflake>=2.3.1",
  "bandit>=1.8",
  "black>=25.1",
  "blacken-docs>=1.19",
  "codespell>=2.3",
  "deptry>=0.23",
  "django-stubs>=5.2.2",
  "factory-boy>=3.3.1",
  "faker>=37.4",
  "hypothesis>=6.125",
  "isort>=6.0.1",
  "matplotlib-stubs>=0.3",
  "mkdocs-awesome-pages-plugin>=2.9",
  "mkdocs-encryptcontent-plugin>=2",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-get-deps>=0.2",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-macros-plugin>=1",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-material>=9.5",
  "mkdocs-mermaid2-plugin>=1.1",
  "mkdocs-minify-plugin>=0.7",
  "mkdocs-print-site-plugin>=0.8",
  "mkdocs-redirects>=1.2",
  "mkdocs-section-index>=0.3.12",
  "mkdocs-versioning>=0.2",
  "mkdocs>=1.6",
  "mkdocstrings-python>=1.7",
  "mkdocstrings>=0.24",
  "pip-audit>=2.7.3",
  "pre-commit>=4.6.0",
  "pylint>=3.3",
  "pyrefly>=1.1.1,<1.2.0",
  "pytest-benchmark>=5.1",
  "pytest-clarity>=1.0.1",
  "pytest-codeblocks>=0.17.0",
  "pytest-cov>=6.2",
  "pytest-deadfixtures>=2.2.1",
  "pytest-env>=1.1.5",
  "pytest-markdown-docs>=0.9.2",
  "pytest-mock>=3.14",
  "pytest-randomly>=3.16",
  "pytest-sugar>=1",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.8",
  "pytest>=8.4",
  "pyupgrade>=3.19",
  "radon>=6.0.1",
  "ruff>=0.12.3",
  "types-cachetools>=6.2",
  "types-cffi>=2.0",
  "types-click>=7.1",
  "types-defusedxml>=0.7",
  "types-docker>=7.1",
  "types-flask>=1.1.6",
  "types-jsonschema>=4.26",
  "types-ldap3>=2.9.13.20250622",
  "types-paramiko>=4.0",
  "types-protobuf>=6.30.2.20250703",
  "types-psutil>=7",
  "types-psycopg2>=2.9.21.20250718",
  "types-pyasn1>=0.6",
  "types-pyopenssl>=24.1",
  "types-python-dateutil>=2.9",
  "types-pyyaml>=6.0.12.20260518",
  "types-redis>=4.6",
  "types-requests>=2.32.4",
  "types-setuptools>=80.9",
  "types-tabulate>=0.10",
  "types-toml>=0.10.8.20240310",
  "vulture>=2.13",
  "yamlfix>=1.19.1,<2",
]

[project.scripts]
flext-web = "flext_web.__main__:main"

[project.urls]
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
Homepage = "https://github.com/flext-sh/flext"

# [MANAGED] codespell
[tool.codespell]
check-filenames = true
ignore-words-list = "crate,nd"

# [MANAGED] coverage
[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "if _t.TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
]
fail_under = 25
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.run]
omit = ["*/dependency_injector/providers.pyx"]
source = ["src"]

# [MANAGED] deptry
[tool.deptry]
known_first_party = [
  "flext_cli",
  "flext_core",
  "flext_infra",
  "flext_tests",
  "flext_web",
]
pep621_dev_dependency_groups = ["dev"]

[tool.flext.docs]
project_class = "platform"

[tool.hatch.build.targets.sdist]
only-include = ["src/flext_web"]

[tool.hatch.build.targets.wheel]
packages = ["src/flext_web"]

[tool.hatch.metadata]
allow-direct-references = true

# [MANAGED] mypy
[tool.mypy]
# FLEXT mypy suppression rationale (validated at the facade-MRO boundary):
# FLEXT mypy[arg-type]: Public p.Result values widen only in Mypy; Pyright and Pyrefly retain T.
# FLEXT mypy[assignment]: Dependency-injector descriptors lose their MRO-bound type only in Mypy.
# FLEXT mypy[attr-defined]: PEP 562 facade members inherited through MRO are invisible to Mypy.
# FLEXT mypy[call-arg]: Pydantic v2 init signatures behind facade MRO are incomplete in Mypy.
# FLEXT mypy[misc]: Valid PEP 695 nested facade aliases are rejected under Mypy's misc bucket.
# FLEXT mypy[name-defined]: Generated PEP 562 exports are installed at runtime but absent to Mypy.
# FLEXT mypy[no-any-return]: Facade returns widen to Any only in Mypy; Pyright and Pyrefly resolve them.
# FLEXT mypy[no-redef]: Canonical c-t-p-m-u facades intentionally rebind their inherited short alias.
# FLEXT mypy[prop-decorator]: Mypy loses Pydantic computed-field descriptors across composed MRO.
# FLEXT mypy[valid-type]: Mypy rejects facade namespaces used as owners in valid PEP 695 aliases.
check_untyped_defs = true
disable_error_code = [
  "arg-type",
  "assignment",
  "attr-defined",
  "call-arg",
  "misc",
  "name-defined",
  "no-any-return",
  "no-redef",
  "prop-decorator",
  "valid-type",
]
exclude = "^legado(?:/|$)"
explicit_package_bases = true
extra_checks = true
follow_imports = "normal"
ignore_missing_imports = true
local_partial_types = true
mypy_path = [".", "src"]
namespace_packages = true
no_implicit_reexport = true
overrides = []
plugins = ["pydantic.mypy", "returns.contrib.mypy.returns_plugin"]
python_version = "3.13"
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

# [MANAGED] pydantic-mypy
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# [MANAGED] pyrefly
[tool.pyrefly]
disable-project-excludes-heuristics = true
ignore-errors-in-generated-code = false
project-excludes = [
  "**/.venv/**",
  "**/__pycache__",
  "**/__pyrefly_virtual__/**",
  "**/legado/**",
  "**/node_modules",
  "**/site-packages/**",
  "**/typings/**",
  "**/vendor/**",
  "**/venv/**",
  ".venv/**",
  "typings/**",
  "vendor/**",
]
project-includes = ["examples/**/*.py*", "src/**/*.py*", "tests/**/*.py*"]
python-interpreter-path = "../.venv/bin/python"
python-version = "3.13"
search-path = [".", "../flext-cli/src", "../flext-core/src", "src"]
use-ignore-files = false

[tool.pyrefly.errors]
abstract-method-call = false
bad-argument-count = "error"
bad-argument-type = "error"
bad-assignment = "error"
bad-class-definition = "error"
bad-context-manager = "error"
bad-dunder-all = "error"
bad-function-definition = "error"
bad-index = "error"
bad-instantiation = "error"
bad-keyword-argument = "error"
bad-match = "error"
bad-override = false
bad-param-name-override = "error"
bad-raise = "error"
bad-return = "error"
bad-specialization = "error"
bad-typed-dict = "error"
bad-typed-dict-key = "error"
bad-unpacking = "error"
deprecated = "error"
implicit-abstract-class = "error"
implicit-any = "error"
implicit-import = "error"
implicitly-defined-attribute = "error"
inconsistent-inheritance = "error"
inconsistent-overload = "error"
inconsistent-overload-default = "error"
invalid-annotation = "error"
invalid-argument = "error"
invalid-decorator = "error"
invalid-inheritance = "error"
invalid-literal = "error"
invalid-overload = "error"
invalid-param-spec = "error"
invalid-pattern = "error"
invalid-self-type = "error"
invalid-super-call = "error"
invalid-type-alias = "error"
invalid-type-var = "error"
invalid-type-var-tuple = "error"
invalid-variance = "error"
invalid-yield = "error"
missing-argument = "error"
missing-attribute = false
missing-import = "error"
missing-module-attribute = false
missing-override-decorator = "error"
missing-source = "error"
missing-source-for-stubs = "error"
no-access = "error"
no-matching-overload = "error"
non-convergent-recursion = false
non-exhaustive-match = false
not-a-type = "error"
not-async = "error"
not-callable = "error"
not-iterable = "error"
not-required-key-access = "error"
open-unpacking = "error"
protocol-implicitly-defined-attribute = "error"
read-only = "error"
redefinition = "error"
redundant-cast = "error"
redundant-condition = "error"
unannotated-attribute = "error"
unannotated-parameter = "error"
unannotated-return = "error"
unbound-name = "error"
unexpected-keyword = "error"
unexpected-positional-argument = "error"
unknown-name = "error"
unnecessary-comparison = "error"
unnecessary-type-conversion = "error"
unreachable = "error"
unresolvable-dunder-all = "error"
unsafe-overlap = "error"
unsupported = "error"
unsupported-delete = "error"
unsupported-operation = "error"
untyped-import = "error"
unused-coroutine = "error"
unused-ignore = "error"
variance-mismatch = "error"

# [MANAGED] pyright
[tool.pyright]
# FLEXT Pyright suppression rationale (validated at the facade-MRO boundary):
# FLEXT pyright[reportAssignmentType]: Pyright rejects the canonical class-alias rebind after MRO facade composition although runtime and the other analyzers resolve it.
# FLEXT pyright[reportGeneralTypeIssues]: Pyright groups the same valid MRO facade alias rebind under its broad general diagnostic in every execution environment.
exclude = [
  "**/.*",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/.ruff_cache",
  "**/.venv",
  "**/.venv/**",
  "**/__pycache__",
  "**/__pyrefly_virtual__/**",
  "**/dist-packages",
  "**/dist-packages/**",
  "**/legado",
  "**/legado/**",
  "**/node_modules",
  "**/site-packages",
  "**/site-packages/**",
  "**/tests/fixtures",
  "**/tests/fixtures/**",
  "**/venv",
  "**/venv/**",
  ".git",
  ".reports",
  ".venv",
  "vendor",
]
extraPaths = [".", "src"]
include = ["examples", "src", "tests"]
pythonPlatform = "Linux"
pythonVersion = "3.13"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "none"
reportInconsistentConstructor = "error"
reportInvalidTypeForm = "none"
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingTypeStubs = "none"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnreachable = "none"
reportUnsupportedDunderAll = "none"
reportUntypedBaseClass = "none"
reportUntypedFunctionDecorator = "none"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedImport = "error"
reportUnusedVariable = "error"
typeCheckingMode = "strict"
venv = ".venv"
venvPath = ".."

[[tool.pyright.executionEnvironments]]
extraPaths = ["src"]
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportGeneralTypeIssues = "none"
reportInvalidTypeForm = "none"
reportPrivateImportUsage = "none"
reportPrivateUsage = "error"
reportReturnType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnusedImport = "none"
root = "src"

[[tool.pyright.executionEnvironments]]
extraPaths = [".", "src"]
reportArgumentType = "none"
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportGeneralTypeIssues = "none"
reportInvalidTypeForm = "none"
reportPrivateImportUsage = "none"
reportPrivateUsage = "none"
reportReturnType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnusedImport = "none"
root = "tests"

[[tool.pyright.executionEnvironments]]
extraPaths = [".", "src"]
reportArgumentType = "none"
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportGeneralTypeIssues = "none"
reportInvalidTypeForm = "none"
reportPrivateImportUsage = "none"
reportPrivateUsage = "none"
reportReturnType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnusedImport = "none"
root = "examples"

# [MANAGED] pytest
[tool.pytest.ini_options]
addopts = ["--durations=10", "--strict-markers"]
filterwarnings = ["error"]
markers = [
  "docker: tests requiring Docker",
  "e2e: end-to-end integration tests",
  "edge_cases: edge case tests",
  "integration: integration tests",
  "performance: performance and benchmark tests",
  "resilience: resilience tests",
  "slow: slow-running tests",
  "smoke: public-interface smoke tests",
  "stress: stress tests",
  "unit: unit tests",
]
minversion = "8.0"
python_classes = ["Test*"]
python_files = ["*_test.py", "*_tests.py", "test_*.py"]
testpaths = ["tests"]

# [MANAGED] ruff
[tool.ruff]
exclude = [
  "**/__pyrefly_virtual__/**",
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "archive",
  "backup",
  "build",
  "dist",
  "htmlcov",
  "legado",
  "temp-backup",
  "typings",
  "vendor",
  "venv",
]
fix = true
line-length = 88
namespace-packages = ["tests"]
preview = true
respect-gitignore = true
show-fixes = true
src = ["examples", "src", "tests"]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
# FLEXT Ruff suppression rationale (validated against semantic facet order):
# FLEXT ruff[import-outside-top-level]: Public facade models are imported lazily only at validation and construction sites to preserve the c-t-p-m-u graph and prevent runtime cycles.
# FLEXT ruff[unsorted-imports]: Ruff sorts TYPE_CHECKING imports lexically and reverses the mandatory semantic c-t-p-m-u dependency order in FLEXT facades.
ignore = [
  "ambiguous-unicode-character-comment",
  "ambiguous-unicode-character-docstring",
  "ambiguous-unicode-character-string",
  "assert-raises-exception",
  "bad-dunder-method-name",
  "bad-quotes-inline-string",
  "blank-line-with-whitespace",
  "blind-except",
  "boolean-positional-value-in-call",
  "camelcase-imported-as-lowercase",
  "collection-literal-concatenation",
  "commented-out-code",
  "complex-structure",
  "docstring-extraneous-exception",
  "docstring-extraneous-returns",
  "docstring-missing-exception",
  "docstring-missing-returns",
  "docstring-missing-yields",
  "get-attr-with-constant",
  "hardcoded-sql-expression",
  "incorrect-blank-line-before-class",
  "invalid-first-argument-name-for-method",
  "line-too-long",
  "logging-f-string",
  "missing-copyright-notice",
  "missing-return-type-private-function",
  "missing-trailing-comma",
  "mixed-case-variable-in-global-scope",
  "multi-line-summary-second-line",
  "no-self-use",
  "non-imperative-mood",
  "non-pep695-type-alias",
  "raise-vanilla-args",
  "raise-within-try",
  "redefined-loop-name",
  "set-attr-with-constant",
  "snake-case-type-alias",
  "too-many-arguments",
  "too-many-branches",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-positional-arguments",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",
  "try-consider-else",
  "typing-only-first-party-import",
  "typing-only-standard-library-import",
  "typing-only-third-party-import",
  "undocumented-param",
  "unnecessary-lambda",
  "unnecessary-placeholder",
]
select = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports.banned-api.argparse]
msg = "Use cli.register_result_command + Pydantic model from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.click]
msg = "Use flext_cli.cli application, registration, execution, and invocation methods."

[tool.ruff.lint.flake8-tidy-imports.banned-api.colorama]
msg = "Use cli.print with c.Cli.MessageStyles."

[tool.ruff.lint.flake8-tidy-imports.banned-api.getpass]
msg = "Use cli.prompt_password from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.orjson]
msg = "Use cli.json_read_file / cli.json_write_file / u.Cli.json_dumps from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.prompt_toolkit]
msg = "Use cli.prompt / cli.confirm / cli.prompt_choice / cli.prompt_password."

[tool.ruff.lint.flake8-tidy-imports.banned-api.rich]
msg = "Use cli.print / cli.display_message / cli.render_panel / cli.render_table."

[tool.ruff.lint.flake8-tidy-imports.banned-api.simplejson]
msg = "Use cli.json_read_file / cli.json_write_file / u.Cli.json_dumps."

[tool.ruff.lint.flake8-tidy-imports.banned-api.tabulate]
msg = "Use cli.format_table / cli.show_table from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.tomlkit]
msg = "Use cli.toml_read_file / u.Cli.toml_load (flext-infra workspace orchestration is exempt)."

[tool.ruff.lint.flake8-tidy-imports.banned-api.tomllib]
msg = "Use cli.toml_read_file / u.Cli.toml_load (flext-infra workspace orchestration is exempt)."

[tool.ruff.lint.flake8-tidy-imports.banned-api.tqdm]
msg = "Use cli.display_progress from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.typer]
msg = "Use cli.create_app_with_common_params / cli.register_command from flext_cli."

[tool.ruff.lint.flake8-tidy-imports.banned-api.ujson]
msg = "Use cli.json_read_file / cli.json_write_file / u.Cli.json_dumps."

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = [
  "flext_cli",
  "flext_core",
  "flext_infra",
  "flext_tests",
  "flext_web",
]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"**/.vulture_whitelist.py" = ["ALL"]
"**/*_pb2*.py" = ["ALL"]
"**/*dispatcher*" = []
"**/*docs*" = [
  "implicit-namespace-package",
  "print",
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
]
"**/*exceptions*" = [
  "builtin-variable-shadowing",
  "hardcoded-password-string",
  "private-member-access",
]
"**/*handlers*" = ["import-outside-top-level"]
"**/*instrumentation*" = [
  "boolean-type-hint-positional-argument",
  "complex-structure",
  "private-member-access",
]
"**/*loggings*" = ["global-statement", "too-many-public-methods"]
"**/*middleware*" = [
  "any-type",
  "boolean-default-value-positional-argument",
  "boolean-type-hint-positional-argument",
  "hardcoded-password-default",
  "unnecessary-dunder-call",
]
"**/*models*" = [
  "any-type",
  "boolean-type-hint-positional-argument",
  "global-statement",
  "import-private-name",
  "property-with-parameters",
]
"**/*oracle*" = ["call-datetime-strptime-without-zone"]
"**/*result*" = ["import-private-name", "private-member-access"]
"**/*runtime*" = []
"**/*scripts*" = [
  "hardcoded-password-default",
  "hardcoded-password-string",
  "implicit-namespace-package",
  "line-contains-todo",
  "magic-value-comparison",
  "print",
  "redefined-loop-name",
  "relative-imports",
  "shebang-not-executable",
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
  "too-many-branches",
  "too-many-return-statements",
  "too-many-statements",
]
"**/*service*" = [
  "mixed-case-variable-in-class-scope",
  "private-member-access",
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
  "unnecessary-dunder-call",
]
"**/*subprocess_utils*" = [
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
]
"**/*typings*" = ["any-type"]
"**/*utilities*" = [
  "complex-structure",
  "module-import-not-at-top-of-file",
  "subprocess-run-without-check",
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
  "unnecessary-dunder-call",
]
"**/__init__.py" = [
  "any-type",
  "builtin-import-shadowing",
  "implicit-namespace-package",
  "import-private-name",
  "invalid-module-name",
  "non-empty-init-module",
  "runtime-import-in-type-checking-block",
  "undefined-export",
  "undefined-local-with-import-star",
  "undefined-local-with-import-star-usage",
  "undocumented-public-init",
  "unused-import",
]
"**/_config.py" = ["invalid-function-name"]
"**/_constants/*.py" = ["hardcoded-password-string"]
"**/_protocols/*.py" = ["invalid-function-name"]
"**/_settings.py" = ["invalid-function-name"]
"**/_utilities/parser.py" = [
  "boolean-type-hint-positional-argument",
  "unused-static-method-argument",
]
"**/alert_manager*.py" = ["suspicious-url-open-usage"]
"**/constants.py" = ["hardcoded-password-string"]
"**/container.py" = ["any-type", "private-member-access"]
"**/context.py" = []
"**/external_command*.py" = [
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
]
"**/file_tools.py" = ["undocumented-public-method"]
"**/flext_cli/_protocols/framework.py" = ["builtin-argument-shadowing"]
"**/flext_cli/_utilities/formatters.py" = ["banned-api"]
"**/flext_cli/_utilities/framework.py" = [
  "banned-api",
  "builtin-argument-shadowing",
  "import-outside-top-level",
]
"**/managers.py" = ["hardcoded-password-string"]
"**/models.py" = [
  "exec-builtin",
  "hardcoded-password-string",
  "unnecessary-dunder-call",
]
"**/orchestrator*.py" = [
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
]
"**/output.py" = ["boolean-type-hint-positional-argument"]
"**/plugins/*.py" = [
  "boolean-default-value-positional-argument",
  "boolean-type-hint-positional-argument",
  "relative-imports",
  "start-process-with-partial-path",
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
]
"**/protocol_impls/*.py" = ["private-member-access"]
"**/providers/*.py" = [
  "hardcoded-password-default",
  "hardcoded-password-func-arg",
]
"**/services/prompts.py" = [
  "undocumented-public-init",
  "undocumented-public-method",
]
"**/settings.py" = [
  "any-type",
  "boolean-type-hint-positional-argument",
  "private-member-access",
]
"**/singer/*.py" = [
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
]
"**/tools/*.py" = [
  "boolean-default-value-positional-argument",
  "boolean-type-hint-positional-argument",
  "invalid-function-name",
  "print",
  "start-process-with-partial-path",
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
]
"**/tools/**/*.py" = [
  "boolean-default-value-positional-argument",
  "boolean-type-hint-positional-argument",
  "invalid-function-name",
  "print",
  "start-process-with-partial-path",
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
]
"**/typings.py" = ["none-not-at-end-of-union"]
"**/workspace/*.py" = [
  "start-process-with-partial-path",
  "subprocess-without-shell-equals-true",
  "suspicious-subprocess-import",
]
"**/rope_patch/*.py" = ["private-member-access"]
"**/tests/**/*.py" = [
  "assert",
  "boolean-positional-value-in-call",
  "boolean-type-hint-positional-argument",
  "compare-to-empty-string",
  "constant-imported-as-non-constant",
  "f-string-in-exception",
  "hardcoded-bind-all-interfaces",
  "hardcoded-password-default",
  "hardcoded-password-func-arg",
  "hardcoded-password-string",
  "hardcoded-temp-file",
  "import-outside-top-level",
  "import-private-name",
  "line-contains-todo",
  "magic-value-comparison",
  "private-member-access",
  "pytest-raises-too-broad",
  "suppressible-exception",
  "too-many-blank-lines",
  "undocumented-public-class",
  "undocumented-public-function",
  "undocumented-public-method",
  "undocumented-public-module",
  "unused-function-argument",
  "unused-lambda-argument",
  "unused-method-argument",
]
"**/conftest.py" = [
  "undocumented-public-function",
  "undocumented-public-method",
  "unused-function-argument",
  "unused-method-argument",
]
"**/handler.py" = ["import-outside-top-level"]

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true

[tool.ruff.lint.pydocstyle]
convention = "google"

# [MANAGED] tomlsort
[tool.tomlsort]
all = true
in_place = true
sort_first = ["build-system", "dependency-groups", "project", "tool"]

[tool.uv]
required-version = "==0.9.21"

[tool.vulture]
exclude = ["*/_protocols/*"]
min_confidence = 100
paths = ["examples", "src", "tests"]
verbose = false

# [MANAGED] yamlfix
[tool.yamlfix]
explicit_start = false
line_length = 88
preserve_quotes = true
section_whitelines = 1
whitelines = 1
